bad/assign_field_bool_new_class_null.example_compiler_output
ERROR
[1mbad/assign_field_bool_new_class_null.lat:7:14: [1;31merror: [0;1massigning to `boolean` from incompatible type `null`[m
	(new C).fld = null;
	            [1;32m^[m
